--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,12 @@
 ---
-const { pathname } = Astro.url;
-const isActive = (path) => pathname === path || pathname === path + '/';
 ---
 <html>
 <h1 class="split-header">
   <span id="name">MATT LABRECQUE</span>
   <span id="links">
-      <a class="link" href="/website/">Home</a>
-      <a class="link" href="/website/blog/">Blog</a>
-      <a class="link" href="/website/documents/MLabrecque-Resume.pdf">Resume</a>
+    <a class="link" href="/website/">Home</a>
+    <a class="link" href="/website/blog/">Blog</a>
+    <a class="link" href="https://www.youtube.com/@mttylbrq">YouTube</a>
     <a class="link" href="https://github.com/matthewlabrecque">GitHub</a>
     <a class="link" href="https://x.com/mlabrecque_dev">X</a>
   </span>
