--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,9 @@ import "../styles/global.css"
 
     <div class="profile-text">
 
-    <p>I'm an Applied Mathematics and Computer Science student who is driven by a desire to help make technology that improves our quality of life. My areas of interest are in the fields
-      of cryptography, machine learning, low-level programming, and operating systems. When I'm not studying or coding, you can find me experimenting with coffee,
-      playing my guitar, writing poetry, or exploring the great outdoors.</p>
+      <p>I'm a third-year Applied Mathematics and Computer Science student interested in the areas of cryptography, machine learning, and operating systems. 
+        I'm also a big proponent of Free (as in Freedom) software and love supporting and working on open-source projects. When I'm not studying or coding, 
+        you can find me experimenting with coffee, playing my guitar, writing poetry, or exploring the great outdoors.</p>
     <p>Contact: <span id="copy-email" class="clickable-email">mail [at] mlabrecque (dot) dev</span></p>
 
     </div>
@@ -27,7 +27,6 @@ import "../styles/global.css"
       <div class="project-grid">
         <Project
           title = "Playcaller"
-          license = "Open Source"
           description="Done as part of a research project on the concept of Disposable Development Environments, Playcaller takes the ideas behind an autoconfiguration 
           script and pushes it to the max. This utility uses Ansible as a backend for creating automation scripts for the configuration and set up of any
           computer running a UNIX-based operating system."
@@ -36,7 +35,6 @@ import "../styles/global.css"
         
         <Project
           title = "qSypher"
-          license = "Open Source"
           description="qSypher (Quantum Sypher) is an undergraduate research project I'm doing with Martin Burns and Ryad Ouhhabi where we are developing a hashing
           algorithm and cipher for encryption on quantum computer systems. As part of this research project I am writing a memory-safe cryptographic tool for quantum
           encrpytion/decryption."
@@ -44,12 +42,19 @@ import "../styles/global.css"
         />
 
         <Project
-        title="sypherOS"
-          license = "Open Source"
-          description="I was inspired by DHH and his Omarchy project to make my own interpretation of a developer friendly, preconfigured Arch Linux spin but instead
-          of using a conventional tiling window manager such as Hyprland, it uses the Niri scrolling window manager. I also wanted to provide a much less opinionated
-          version of Arch for developers with minimum setup."
+          title="sypherOS"
+          description="A project heavily inspired by the Omarchy project, SypherOS is a Fedora-based distribution which aims to provide a developer friendly, 
+          preconfigured desktop which uses the Niri scrolling window manager. The goal of this project is to allow people to get 90% of the benefits of 
+          tiling desktops, but not nearly as opinionated as Omarchy."
           tags={["Linux"]}
+        />
+
+        <Project
+          title="Billboard Top 40 Tracker"
+        description="This was a weekend project to help me in my job working as a DJ at 91.3FM WUNH. The radio station has a strict policy against playing anything
+        from the Bill Top 40 charts, but there was no real easy way to get this information in one place. I wrote a small Python program which uses an API call to
+        list any songs that made the Billboard top 40, and a front end to allow easy searching of this list."
+        tags={["Python", "API"]}
         />
      </div>
     
